Created the journey for user testing
My Tasks page:

    Add new location
    Apply
    (see results)

My Tasks page:

    Deselect a service
    Apply
    (see results)

My Tasks page:

    Deselect all locations
    Apply
    (see errors)

My Tasks page

    No location in user profile
    (see information message)

--- a/app/views/workallocation/pages/available-tasks-c.html
+++ b/app/views/workallocation/pages/available-tasks-c.html
@@ -12,7 +12,7 @@ My work
                <h1 class="govuk-heading-xl">My work</h1>
           </div>
     </div>
-    <p>Access tasks and cases.</p>
+    <p>Use the work filter to show tasks and cases based on service, work type and location.</p>
     {{ govukButton({
   text: "Show work filter",
   classes: "govuk-button--secondary"
