--- a/app/views/workallocation/pages/wa-show-work-filter-remove-1-apply.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-remove-1-apply.html
@@ -80,7 +80,7 @@ My work
           <div style="width:25%; display:inline-block; vertical-align:top; margin-top:25px; margin-left:10px;">
             {{ govukButton({
               text: "Add location",
-              href: "/workallocation/pages/wa-show-work-filter-add-2.html",
+              href: "/workallocation/pages/wa-show-work-filter-add-1.html",
               classes: "govuk-!-margin-right-3"
             }) }}
           </div>
@@ -93,26 +93,59 @@ My work
                 Taylor House Tribunal Hearing Centre
               </a>
             </li>
-            <li>
-              <a class="hmcts-filter__tag" href="/workallocation/pages/wa-show-work-filter.html">
-                <span class="govuk-visually-hidden">
-                  Remove this filter
-                </span>
-                Birmingham Civil and Family Justice Centre
-              </a>
-            </li>
-            <li>
-              <a class="hmcts-filter__tag" href="/workallocation/pages/wa-show-work-filter-add-1.html">
-                <span class="govuk-visually-hidden">
-                  Remove this filter
-                </span>
-                Hatton Cross Tribunal Hearing Centre
-              </a>
-            </li>
           </ul>
           <hr>
           <h2 class="govuk-heading-s">Types of work</h2>
-        <p class="govuk-body">Show tasks for the selected type of works:</p>
+        {% if  data.usertype == 'judiciary'   %}
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
+            <div class="govuk-checkboxes govuk-checkboxes--small">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="select-all" name="typeofwork" type="checkbox" value="select-all" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="select-all">
+                  <strong>Select all</strong>
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="access-request" name="typeofwork" type="checkbox" value="access-request" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="access-request">
+                  Access request
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="application" name="typeofwork" type="checkbox" value="application" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="application">
+                  Applications
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="decision-making-work" name="typeofwork" type="checkbox" value="decision-making-work" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="decision-making-work">
+                  Decision-making work
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="hearing-work" name="typeofwork" type="checkbox" value="hearing-work" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="hearing-work">
+                  Hearing work
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="manage-errors" name="typeofwork" type="checkbox" value="manage-errors" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="manage-errors">
+                  Manage errors
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="govuk-grid-column-one-quarter">
+            <p></p>
+          </div>
+          <div class="govuk-grid-column-one-quarter">
+            <p></p>
+          </div>
+        </div>
+        {% else %}
         <div class="govuk-grid-row">
           <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
             <div class="govuk-checkboxes govuk-checkboxes--small">
@@ -179,6 +212,7 @@ My work
             <p></p>
           </div>
         </div>
+        {% endif %}
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         {{ govukButton({
           text: "Apply",
@@ -301,37 +335,6 @@ My work
               text: now | date( 'add', 8, 'days' ) | date,
               classes: "govuk-tag--grey"
             })}} -->{{ now |  date("subtract", 8, "day") | date( "D MMMM YYYY" ) }} </td>
-              <!--  <td class="govuk-table__cell">N/A</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
-              <td class="govuk-table__cell"> <!--{{govukTag({
-              text: now | date( 'subtract', 2, 'days' ) | date,
-              classes: "govuk-tag--red"
-            })}} --> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
-              <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">John Pickering</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-                  style="fill: black">
-                  <title>This case has more than one task. Review needed.</title>
-                  <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                        C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-                </svg></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-              <td class="govuk-table__cell"><!--{{govukTag({
-              text: now | date( 'add', 0, 'days' ) | date,
-              classes: "govuk-tag--yellow"
-            })}} --> {{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</td>
               <!--  <td class="govuk-table__cell">N/A</td> -->
               <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
