--- a/app/views/workallocation/pages/wa-show-work-filter-zero.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-zero.html
@@ -7,18 +7,19 @@
 My work
 {% endblock %}
 {% block content %}
+
 <div class="govuk-width-container">
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
       <h1 class="govuk-heading-xl">My work</h1>
     </div>
   </div>
-  <p>Access tasks and cases.</p>
+  <p>Use the work filter to show tasks and cases based on service, work type and location.</p>
 
   {{ govukButton({
     text: "Hide work filter",
     classes: "govuk-button--secondary",
-    href: "/workallocation/pages/wa-mytasks.html"}) }}
+    href: "/workallocation/pages/wa-mytasks-no-task.html"}) }}
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half"
@@ -80,28 +81,10 @@ My work
           <div style="width:25%; display:inline-block; vertical-align:top; margin-top:25px; margin-left:10px;">
             {{ govukButton({
               text: "Add location",
-              href: "",
+              href: "/workallocation/pages/wa-show-work-filter-add-0.html",
               classes: "govuk-!-margin-right-3"
             }) }}
           </div>
-          <ul class="hmcts-filter-tags">
-            <li>
-              <a class="hmcts-filter__tag" href="">
-                <span class="govuk-visually-hidden">
-                  Remove this filter
-                </span>
-                Taylor House Tribunal Hearing Centre
-              </a>
-            </li>
-            <li>
-              <a class="hmcts-filter__tag" href="/workallocation/pages/wa-show-work-filter-remove-1.html">
-                <span class="govuk-visually-hidden">
-                  Remove this filter
-                </span>
-                Birmingham Civil and Family Justice Centre
-              </a>
-            </li>
-          </ul>
           <hr>
           <h2 class="govuk-heading-s">Types of work</h2>
         {% if  data.usertype == 'judiciary'   %}
@@ -139,9 +122,9 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="manage-errors" name="typeofwork" type="checkbox" value="manage-errors" checked>
-                <label class="govuk-label govuk-checkboxes__label" for="manage-errors">
-                  Manage errors
+                <input class="govuk-checkboxes__input" id="upper-tribunal" name="typeofwork" type="checkbox" value="upper-tribunal" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="upper-tribunal">
+                  Upper Tribunal
                 </label>
               </div>
             </div>
@@ -164,12 +147,6 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="access-request" name="typeofwork" type="checkbox" value="access-request" checked>
-                <label class="govuk-label govuk-checkboxes__label" for="access-request">
-                  Access request
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="application" name="typeofwork" type="checkbox" value="application" checked>
                 <label class="govuk-label govuk-checkboxes__label" for="application">
                   Applications
@@ -188,20 +165,14 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="manage-errors" name="typeofwork" type="checkbox" value="manage-errors" checked>
-                <label class="govuk-label govuk-checkboxes__label" for="manage-errors">
-                  Manage errors
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="priority" name="typeofwork" type="checkbox" value="priority" checked>
                 <label class="govuk-label govuk-checkboxes__label" for="priority">
                   Priority
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="routine-work" name="typeofwork" type="checkbox" value="routine-work" checked>
-                <label class="govuk-label govuk-checkboxes__label" for="routine-work">
+                <input class="govuk-checkboxes__input" id="routine" name="typeofwork" type="checkbox" value="routine" checked>
+                <label class="govuk-label govuk-checkboxes__label" for="routine">
                   Routine work
                 </label>
               </div>
@@ -224,7 +195,7 @@ My work
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         {{ govukButton({
           text: "Apply",
-          href: "/workallocation/pages/wa-show-work-filter-results.html",
+          href: "",
           classes: "govuk-!-margin-right-3"
         }) }}
       </div>
@@ -256,111 +227,7 @@ My work
             </li>
           </ul>
         </nav>
-        <p class="govuk-body">Displaying <strong>5</strong> of <strong>5</strong> tasks</p>
-        <table class="govuk-table">
-          <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25px;" aria-sort="none"></th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;" aria-sort="none"></th>
-            </tr>
-          </thead>
-          <tbody class="govuk-table__body">
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House Tribunal Hearing Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
-              <td class="govuk-table__cell"> <!--{{govukTag({
-              text: now | date( 'subtract', 2, 'days' ) | date,
-              classes: "govuk-tag--red"
-            })}} --> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
-              <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Olivia-Rose Olsen</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House Tribunal Hearing Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-              <td class="govuk-table__cell"><!--{{govukTag({
-              text: now | date( 'add', 0, 'days' ) | date,
-              classes: "govuk-tag--yellow"
-            })}} --> {{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</td>
-              <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">John Pickering</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House Tribunal Hearing Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-                  style="fill: black">
-                  <title>This case has more than one task. Review needed.</title>
-                  <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                        C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-                </svg></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-              <td class="govuk-table__cell"><!--{{govukTag({
-              text: now | date( 'add', 0, 'days' ) | date,
-              classes: "govuk-tag--yellow"
-            })}} --> {{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</td>
-              <!--  <td class="govuk-table__cell">N/A</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Neha Venkatanarasimharaj</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House Tribunal Hearing Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-              <td class="govuk-table__cell"><!--{{govukTag({
-              text: now | date( 'add', 6, 'days' ) | date,
-              classes: "govuk-tag--grey"
-            })}} -->{{ now |  date("subtract", 6, "day") | date( "D MMMM YYYY" ) }}</td>
-              <!--  <td class="govuk-table__cell">N/A</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-            <tr class="govuk-table__row">
-
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hudson Remi</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House Tribunal Hearing Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-                  style="fill: black">
-                  <title>This case has more than one task. Review needed.</title>
-                  <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                        C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-                </svg></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review application decision</td>
-              <td class="govuk-table__cell"><!--{{govukTag({
-              text: now | date( 'add', 8, 'days' ) | date,
-              classes: "govuk-tag--grey"
-            })}} -->{{ now |  date("subtract", 8, "day") | date( "D MMMM YYYY" ) }} </td>
-              <!--  <td class="govuk-table__cell">N/A</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
-              <td class="govuk-table__cell"> <!--{{govukTag({
-              text: now | date( 'subtract', 2, 'days' ) | date,
-              classes: "govuk-tag--red"
-            })}} --> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
-              <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-          </tbody>
-        </table>
+        <p class="govuk-body">Displaying <strong>0</strong> of <strong>0</strong> tasks</p>
       </div>
     </div>
 
